# xpOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
BuildEnv/: Dockerfile
BuildEnv/files/gcc/: config.gcc.patch
BuildEnv/files/src/: build-gcc.sh
Kernel/: CMakeLists.txt  guard-abi.cpp  guard-abi.h  icxxabi.cpp  icxxabi.h  kernel.cpp  main.swift  panic.h
Kernel/API/: Endian.h  Event.h  Framebuffer.h  HID.h  Network.h  Pipes.h  SharedMemory.h  Syscall.h
Kernel/Arch/: CPU.cpp  CPU.h  GDT.cpp  GDT.h  TSS.h
Kernel/Arch/IO/: IO.h  PCI.cpp  PCI.h  PIT.cpp  PIT.h
Kernel/Arch/Interrupts/: Interrupts.cpp  Interrupts.h  PIC.cpp  PIC.h
Kernel/Boot/: Multiboot.cpp  MultibootManager.h  multiboot2.h
Kernel/Boot/Modules/: ModuleManager.cpp  ModuleManager.h
Kernel/Common/: Atomic.h  BinarySearchTree.h  CircularBuffer.h  Expected.h  Hashmap.h  List.h  Optional.h  PriorityQueue.h  ReferenceCounting.h  String.cpp  String.h  Vector.h
Kernel/Common/Hash/: MurmurHash3.cpp  MurmurHash3.h
Kernel/Drivers/Graphics/VMWare/: SVGAII.cpp  SVGAII.h
Kernel/Drivers/HID/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Kernel/Drivers/Initrd/: TARinitrd.cpp  TARinitrd.h
Kernel/Drivers/Network/: NetworkDriver.cpp  NetworkDriver.h  PCNet.cpp  PCNet.h
Kernel/Drivers/Sound/AC97/: AC97.cpp  AC97.h
Kernel/Drivers/Sound/WAV/: WAV.cpp  WAV.h
Kernel/Event/: Dispatcher.cpp  Dispatcher.h  Sender.cpp  Sender.h
Kernel/Filesystem/: VFS.cpp  VFS.h
Kernel/Loader/: ELF.cpp  ELF.h
Kernel/Memory/: Address.h  AddressSpace.cpp  AddressSpace.h  KernelHeap.cpp  KernelHeap.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  SharedMemory.cpp  SharedMemory.h  dlmalloc.c  dlmalloc.h  dlmallochook.cpp  dlmallochook.h
Kernel/Networking/: NetworkServer.cpp  NetworkServer.h  NetworkSocket.cpp  NetworkSocket.h
Kernel/Networking/ARP/: ARP.cpp  Common.h  Receive.h  Send.h
Kernel/Networking/Ethernet/: Common.h  Ethernet.cpp  Receive.h  Send.h
Kernel/Networking/IP/: IPv4.cpp
Kernel/Networking/IP/IPv4/: Common.h  Receive.h  Send.h
Kernel/Networking/TCP/: Common.h  Receive.h  Socket.h  TCP.cpp
Kernel/Pipes/: EventListener.cpp  EventListener.h  EventListenerList.h  EventType.h  LocalSocket.cpp  LocalSocket.h  Pipe.cpp  Pipe.h  Socket.h
Kernel/Syscalls/: SyscallHandler.cpp  SyscallHandler.h
Kernel/Tasks/: MasterScheduler.cpp  MasterScheduler.h  Mutex.cpp  Mutex.h  Scheduler.h  Spinlock.cpp  Spinlock.h  Task.h  TaskManager.cpp  TaskManager.h  WaitQueue.cpp  WaitQueue.h
Kernel/x86_64/: CMakeLists.txt  print.cpp  print.h  x86_64.h
Kernel/x86_64/Boot/: header.asm  main.asm  main64.asm
Kernel/x86_64/Interrupts/: interrupts.asm
Kernel/x86_64/Task/: task.asm
Kernel/x86_64/Userspace/: userspace.asm
Targets/x86_64/: linker.ld
Targets/x86_64/iso/boot/grub/: grub.cfg
Toolchain/: GNUToolchain.cmake  build-binutils.sh  build-gcc.sh
Toolchain/Patches/: CrossBinutils.patch  CrossGCC.patch
Userspace/: CMakeLists.txt
Userspace/Applications/: CMakeLists.txt
Userspace/Applications/MusicPlayer/: CMakeLists.txt  Player.cpp
Userspace/Applications/doomgeneric/: CMakeLists.txt  doomgeneric_xpos.cpp
Userspace/Libraries/: CMakeLists.txt
Userspace/Libraries/AudioLib/: CMakeLists.txt
Userspace/Libraries/AudioLib/WAV/: WAV.cpp  WAV.h
Userspace/Libraries/GUILib/: CMakeLists.txt  Context.cpp  Context.h  Image.cpp  Image.h  Stack.cpp  Stack.h  View.cpp  View.h  Window.cpp  Window.h
Userspace/Libraries/GraphicsLib/: CMakeLists.txt  Framebuffer.h  Graphics.cpp  Graphics.h  Image.cpp  Text.cpp  Text.h
Userspace/Libraries/IPCLib/: Connection.h  Server.h
Userspace/Libraries/OSLib/: CMakeLists.txt  EventListener.cpp  EventListener.h  Pipe.cpp  Pipe.h  Socket.cpp  Socket.h
Userspace/Libraries/SerialisationLib/: Archive.h  CMakeLists.txt  DeserialisedData.cpp  DeserialisedData.h  SerialisedData.cpp  SerialisedData.h
Userspace/System/: CMakeLists.txt
Userspace/System/WindowServer/: CMakeLists.txt  ClientEndpoint.h  Geometry.h  Graphics.cpp  Graphics.h  HID.cpp  HID.h  InfiniteDesktop.cpp  InfiniteDesktop.h  Screen.cpp  Screen.h  Server.cpp  ServerEndpoint.h  Window.cpp  Window.h
